--- a/src/components/Input/TimeInput/TimeInput.scss
+++ b/src/components/Input/TimeInput/TimeInput.scss
@@ -1,5 +1,5 @@
 .moonstone-timeInput {
-    gap: var(--spacing-nano);
+    gap: var(--moon-spacing-nano);
 }
 
 .moonstone-timeInput_field_12h {
